# Production-Lens-Validation

./: .gitignore  2025-11-02-CS0.47-TeamCharter.docx.md  CONTRIBUTING.md  LensCheck User Guide.docx  ProjectDescription.md  Readme.md
.github/workflows/: cmake-single-platform.yml
CameraSDK/OptiTrackCameraSDK_confidential_115_release-3.4.0_BUILD110/CameraSDK/include/inputmanagerusb/: CameraUsbIoReader.h  UsbIo.h  UsbIoReader.h
CameraSDK/OptiTrackCameraSDK_confidential_115_release-3.4.0_BUILD110/CameraSDK/lib/cmake/CameraLibrary/: CameraLibraryConfig-release.cmake  CameraLibraryConfig.cmake
CameraSDK/OptiTrackCameraSDK_confidential_115_release-3.4.0_BUILD110/CameraSDK/samples/CameraViewerApp/: BuildCameraApp.bat  CMakeLists.txt  FocusEval.cpp  FocusEval.h  QtCameraViewer.cpp  WindowsBuildInstructions.txt  main.cpp  winBuild.bat
CameraSDK/OptiTrackCameraSDK_confidential_115_release-3.4.0_BUILD110/CameraSDK/samples/InfoDump/: WindowsBuildInstructions.txt  winBuild.bat
CameraSDK/include/: ActiveIOCommands.h  ActiveIOTypes.h  DuplexFrameHelper.h  FrameCache.h  activetag.h  activetagtelemetry.h  bitmap.h  blankframedata.h  camera.h  cameracommands.h  cameracommonglobals.h  cameralibrary.h  cameralibraryglobals.h  cameralibrarysettings.h  cameramanager.h  cameramodulebase.h  camerarev10.h  camerarev11.h  camerarev12.h  camerarev13.h  camerarev14.h  camerarev15.h  camerarev16.h  camerarev17.h  camerarev18.h  camerarev21.h  camerarev23.h  camerarev24.h  camerarev25.h  camerarev26.h  camerarev27.h  camerarev29.h  camerarev30.h  camerarev31.h  camerarev32.h  camerarev33.h  camerarev34.h  camerarev35.h  camerarev36.h  camerarev37.h  (+50 more)
CameraSDK/include/Core/: BasicTypes.h  BoneAnimation.h  Box2.h  Box3.h  BuildConfig.h  BuildStamp.h  CameraRay.h  ColorHelpers.h  DOFDefinition.h  DebugSystem.h  Euler.h  EulerTypes.h  Event.h  Frame.h  FrameRangeSlice.h  HighPerformanceLogger.h  IBasicStream.h  IReader.h  ISerializer.h  IWriter.h  JobQueue.h  Label.h  MD5.h  Marker.h  MathTypes.h  Matrix4.h  Matrix4.inl  Plane.h  Platform.h  Quaternion.h  RandomNumberGenerator.h  Region2.h  Region3.h  RenderShape.h  RigidBody.h  Serializer.h  SimpleTransform.h  Singleton.h  Thread.h  ThreadHandle.h  (+10 more)
CameraSDK/include/inputmanagerethernet/: iphelpers.h
CameraSDK/include/inputmanagerusb/: CameraUsbIoReader.h  UsbIo.h  UsbIoReader.h  usbcameramanager.h
CameraSDK/lib/: CameraLibrary.lib
CameraSDK/lib/cmake/CameraLibrary/: CameraLibraryConfig-release.cmake  CameraLibraryConfig.cmake  CameraLibraryConfigVersion.cmake
CameraViewerApp/: BitmapPool.cpp  BitmapPool.h  BuildCameraApp.bat  CMakeLists.txt  CameraHelpers.h  CircleMarkerDetector.cpp  CircleMarkerDetector.h  FocusEval.cpp  FocusEval.h  FocusResultLabel.h  FocusResultText.h  FocusScoreLabel.h  GradientDot.h  LensResultLabel.h  MetricsExporter.cpp  MetricsExporter.h  MetricsManager.cpp  MetricsManager.h  QtCameraConnectionManager.cpp  QtCameraConnectionManager.h  QtCameraControlPanel.cpp  QtCameraControlPanel.h  QtCameraPicker.cpp  QtCameraPicker.h  QtCameraViewer.cpp  QtCameraViewer.h  QtCameraViewer_npuck.cpp  QtCameraViewer_npuck.h  QtVideoWidget.cpp  QtVideoWidget.h  Readme  UbuntuBuildInstructions.txt  WindowsBuildInstructions.txt  app.rc  build.sh  main.cpp  metricscontroller.cpp  metricscontroller.h  resources.qrc  videodecoder.cpp  (+2 more)
CameraViewerApp/i18n/: app_en.ts  app_zh_CN.ts
CameraViewerApp/license/: QtLicense.txt
CameraViewerApp/widgets/: graphwidget.cpp  graphwidget.h
Designs/: motive.css
Documents/: 2025-11-02-CS0.47-TeamCharter.docx.md
OptiTrack_Camera_SDK_3.4.1_Final_Ubuntu/include/: camera.h  version.h
OptiTrack_Camera_SDK_3.4.1_Final_Ubuntu/include/Core/: BuildStamp.h
OptiTrack_Camera_SDK_3.4.1_Final_Ubuntu/lib/cmake/CameraLibrary/: CameraLibraryConfigVersion.cmake
